testsuite/tests/parser/should_fail/readFail030.hs
{-# LANGUAGE ExtensibleRecords, RestrictedTypeSynonyms, HereDocuments, NamedFieldPuns #-}
