testsuite/tests/parser/should_fail/readFail030.stderr

readFail030.hs:1:14: error: [GHC-46537]
    Unsupported extension: ExtensibleRecords
